API integrated with angular app

--- a/app/src/app/task/task-list/task-list.component.html
+++ b/app/src/app/task/task-list/task-list.component.html
@@ -6,6 +6,7 @@
 			class="task-item-checkbox"
 			[ngClass]="{ 'task-item-checkbox--checked': task.isCompleted }"
 			[(ngModel)]="task.isCompleted"
+			(change)="taskStatusChanges($event, task, position)"
 		>
 			{{ task.title }}
 		</mat-checkbox>
